--- a/smoky/css/style.css
+++ b/smoky/css/style.css
@@ -1193,6 +1193,7 @@ h3 {
   background-size: contain;
   width: 16px;
   height: 25px;
+  display: inline-block;
 }
 .sidenav__svg_2 {
   background-image: url(../img/icon_tobaccoo.svg);
@@ -1200,18 +1201,21 @@ h3 {
   background-size: 100% 100%;
   width: 21px;
   height: 14px;
+  display: inline-block;
 }
 .sidenav__svg_3 {
   background-image: url(../img/icon_coal.svg);
   background-size: contain;
   width: 21px;
   height: 17px;
+  display: inline-block;
 }
 .sidenav__svg_4 {
   background-image: url(../img/icon_accessories.svg);
   background-size: contain;
   width: 21px;
   height: 21px;
+  display: inline-block;
 }
 .sidenav__svg_5 {
   background-image: url(../img/icon_smoking-blends.svg);
@@ -1219,48 +1223,56 @@ h3 {
   background-size: 100% 100%;
   width: 20px;
   height: 16px;
+  display: inline-block;
 }
 .sidenav__svg_6 {
   background-image: url(../img/icon_kolba.svg);
   background-size: contain;
   width: 14px;
   height: 19px;
+  display: inline-block;
 }
 .sidenav__svg_7 {
   background-image: url(../img/icon_elHookah.svg);
   background-size: contain;
   width: 22px;
   height: 22px;
+  display: inline-block;
 }
 .sidenav__svg_8 {
   background-image: url(../img/icon_vape.svg);
   background-size: contain;
   width: 12px;
   height: 24px;
+  display: inline-block;
 }
 .sidenav__svg_9 {
   background-image: url(../img/icon_vapeWater.svg);
   background-size: contain;
   width: 10px;
   height: 22px;
+  display: inline-block;
 }
 .sidenav__svg_10 {
   background-image: url(../img/icon_game.svg);
   background-size: contain;
   width: 22px;
   height: 22px;
+  display: inline-block;
 }
 .sidenav__svg_11 {
   background-image: url(../img/icon_tea.svg);
   background-size: contain;
   width: 22px;
   height: 14px;
+  display: inline-block;
 }
 .sidenav__svg_12 {
   background-image: url(../img/icon_candy.svg);
   background-size: contain;
   width: 22px;
   height: 21px;
+  display: inline-block;
 }
 .sidenav__more {
   position: absolute;
@@ -2013,6 +2025,11 @@ h3 {
 .dropdown li a:hover {
   color: #a91c5f;
 }
+.dropdown li a.showall {
+  color: #000;
+  text-decoration: underline;
+  font-weight: 500;
+}
 .dropdown li.dropdown__title {
   margin-bottom: 10px;
 }
@@ -2022,6 +2039,96 @@ h3 {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-weight: 500;
+}
+.dropdown .popular__item {
+  padding-bottom: 10px;
+}
+.dropdown__boxitem a {
+  display: inline-block;
+  color: #000;
+}
+
+.dropdowncatalog {
+  flex-wrap: wrap;
+}
+.dropdowncatalog ul {
+  min-width: 16% !important;
+  margin-bottom: 20px;
+}
+.dropdowncatalog li.dropdown__title a {
+  color: #000;
+  font-size: 13px;
+  line-height: normal;
+}
+.dropdowncatalog li a {
+  color: #000;
+}
+.dropdowncatalog .sidenav__svg_1 {
+  background-size: 100%;
+  width: 15px;
+  height: 23px;
+  filter: brightness(0);
+}
+.dropdowncatalog .sidenav__svg_2 {
+  background-size: 100%;
+  width: 24px;
+  height: 14px;
+  filter: brightness(0);
+}
+.dropdowncatalog .sidenav__svg_3 {
+  background-size: 100%;
+  width: 18px;
+  height: 14px;
+  filter: brightness(0);
+}
+.dropdowncatalog .sidenav__svg_4 {
+  background-size: 100%;
+  width: 24px;
+  height: 24px;
+  transform: rotate(-20deg);
+  filter: brightness(0);
+}
+.dropdowncatalog .sidenav__svg_5 {
+  background-size: 100%;
+  width: 18px;
+  height: 21px;
+  filter: brightness(0);
+}
+.dropdowncatalog .sidenav__svg_6 {
+  filter: brightness(0);
+}
+.dropdowncatalog .sidenav__svg_7 {
+  filter: brightness(0);
+}
+.dropdowncatalog .sidenav__svg_8 {
+  filter: brightness(0);
+}
+.dropdowncatalog .sidenav__svg_9 {
+  background-size: 100%;
+  width: 12px;
+  height: 26px;
+  filter: brightness(0);
+}
+.dropdowncatalog .sidenav__svg_10 {
+  filter: brightness(0);
+}
+.dropdowncatalog .sidenav__svg_11 {
+  background-size: 100%;
+  width: 24px;
+  height: 16px;
+  filter: brightness(0);
+}
+.dropdowncatalog .sidenav__svg_12 {
+  filter: brightness(0);
+}
+.dropdowncatalog .dropdown__title {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  min-height: 30px;
+}
+.dropdowncatalog .dropdown__title a {
+  margin-left: 5px;
 }
 
 .slider {
@@ -2245,6 +2352,7 @@ h3 {
   padding-bottom: 0;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.17);
   position: relative;
+  background: #fff;
 }
 .popular__top {
   display: flex;
