--- a/smoky/scss/layout/_content.scss
+++ b/smoky/scss/layout/_content.scss
@@ -119,6 +119,9 @@ h3{
 			}
 			li{
 				border-bottom: 0;
+				a{
+					line-height: 25px;
+				}
 			}
 		}
 		a{
@@ -170,7 +173,7 @@ h3{
 			display: inline-block;
 		}
 		&_3{
-			background-image: url(../img/icon_coal.svg);
+			background-image: url(../img/icon.svg);
 			background-size: contain;
 			width: 21px;
 			height: 17px;
@@ -283,21 +286,18 @@ h3{
 		justify-content: center;
 		align-items: center;
 		cursor: pointer;
-		i{
-			color: #2d2d2d;
-			font-size: 13px;
-			margin-bottom: -1px;
-			margin-right: -1px;
+		img{
+			width: 8px;
 		}
 		&_active{
-			i{
+			img{
 				transform: rotate(180deg);
 			}
 		}
 		&:hover{
 			background: #8f8f8f;
-			i{
-				color: #fff;
+			img{
+				filter: brightness(0) invert(1);
 			}
 		}
 	}
@@ -401,7 +401,7 @@ h3{
 			margin-right: 5px;
 		}
 		input{
-			width: 54px;
+			width: 58px;
 			height: 21px;
 			color: #2d2d2d;
 			font-family: 'Roboto', sans-serif;
@@ -692,6 +692,7 @@ h3{
 			font-family: 'Roboto', sans-serif;
 		    font-size: 14px;
 		    font-weight: 400;
+		    text-transform: uppercase;
 		    &:hover{
 		    	color: #a91c5f;
 		    }
@@ -906,6 +907,7 @@ h3{
 	align-items: center;
 	justify-content: space-around;
 	position: relative;
+	overflow: hidden;
 	ul{
 		width: 100%;
 		list-style: none;
@@ -1208,6 +1210,7 @@ h3{
 		margin-bottom: 15px;
 		position: relative;
 		box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.17);
+		transition: all .2s ease-in-out;
 		a{
 			font-family: 'Roboto', sans-serif;
 			font-size: 16px;
@@ -1237,6 +1240,9 @@ h3{
 		    	left: 0;
 		    }
 		}
+		&:hover{
+			box-shadow: 0px 4px 15px 2px rgba(0, 0, 0, 0.17)
+		}
 	}
 	&__img{
 		overflow: hidden;
@@ -1252,8 +1258,10 @@ h3{
 		img{
 			margin-left: -6px;
 			transition: all .2s ease-in-out;
-			&:hover{
-				transform: scale(1.1);
+		}
+		&_5{
+			img{
+				margin-left: 0;
 			}
 		}
 	}
@@ -1267,6 +1275,10 @@ h3{
 	/* the slides */
 	.slick-slide {
     	margin-bottom: 10px;
+    	transition: all .2s ease-in-out;
+    	&:hover{
+    		box-shadow: 0px 4px 15px 2px rgba(0, 0, 0, 0.17)
+    	}
 	}
 	.slick-prev{
 		height: 69px;
@@ -1310,6 +1322,9 @@ h3{
 		box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.17);
 		position: relative;
 		background: #fff;
+		&:hover{
+			box-shadow: 0px 4px 15px 2px rgba(0, 0, 0, 0.17);
+		}
 	}
 	&__top{
 		display: flex;
@@ -1387,7 +1402,7 @@ h3{
 			border: 1px solid #aeaeae;
 			border-radius: 4px;
 			margin: 0 3px;
-			color: #aeaeae;
+			color: #000;
 			font-family: 'Roboto', sans-serif;
 			font-size: 12px;
 			font-weight: 700;
@@ -1454,6 +1469,19 @@ h3{
 		&:last-child{
 			border-bottom: 1px solid #cfcfcf;
 		}
+		i{
+			color: #3a424b;
+			cursor: pointer;
+			&:hover{
+				color: #a91c5f;
+			}
+			&:focus{
+				color: #a91c5f;
+			}
+		}
+		i.active{
+			color: #a91c5f;
+		}
 	}
 }
 .pprice{
@@ -1514,6 +1542,12 @@ h3{
 	display: block;
     margin: 0 auto;
     &:hover{
+    	background: #3b205c;
+    	color: #fff;
+    	border: 0;
+    	border-bottom: 2px solid #192028;
+    }
+    &_active{
     	background: #3b205c;
     	color: #fff;
     	border: 0;
@@ -1757,10 +1791,14 @@ h3{
 		h2{
 			color: #a91c5f;
     		font: 16px NP;
+    		position: relative;
+    		z-index: 2;
 		}
 		p{
 			color: #626262;
 			font: 13px NP;
+			position: relative;
+    		z-index: 2;
 		}
 		img{
 			position: absolute;
@@ -1819,86 +1857,213 @@ h3{
 #container{
 	position: relative;
 }
-div.jqcloud span{
-	color: #626262 !important;
-	font-family: 'Roboto', sans-serif !important;
-	font-weight: 300 !important;
+.demo1{
+	position: relative;
+	width: 250px;
+	height: 150px;
+	&__link{
+		color: #626262;
+		font-family: 'Roboto', sans-serif;
+		font-weight: 300;
+		position: absolute;
+		&_1{
+			font-size: 21px;
+			top: 10px;
+			left: 55px;
+		}
+		&_2{
+			font-size: 13px;
+			top: 15px;
+			left: 100px;
+		}
+		&_3{
+			font-size: 39px;
+			top: 20px;
+			left: 155px;
+		}
+		&_4{
+			font-size: 13px;
+			top: 25px;
+			left: 20px;
+		}
+		&_5{
+			font-size: 16px;
+			top: 40px;
+			left: 70px;
+		}
+		&_6{
+			font-size: 20px;
+			top: 45px;
+			left: 5px;
+		}
+		&_7{
+			font-size: 12px;
+			top: 60px;
+			left: 120px;
+		}
+		&_8{
+			font-size: 17px;
+			top: 70px;
+			left: 190px;
+		}
+		&_9{
+			font-size: 13px;
+			top: 75px;
+			left: 5px;
+		}
+		&_10{
+			font-size: 20px;
+			top: 78px;
+			left: 85px;
+		}
+		&_11{
+			font-size: 11px;
+			top: 100px;
+			left: 20px;
+		}
+		&_12{
+			font-size: 8px;
+			top: 107px;
+			left: 100px;
+		}
+		&_13{
+			font-size: 16px;
+			top: 105px;
+			left: 160px;
+		}
+		&_14{
+			font-size: 17px;
+			top: 125px;
+			left: 15px;
+		}
+		&_15{
+			font-size: 13px;
+			top: 133px;
+			left: 145px;
+		}
+	}
 }
-
-div.jqcloud span#demo_word_0,
-div.jqcloud span#demo1_word_0,
-div.jqcloud span#demo2_word_0{
-	font-size: 21px !important;
+.demo2{
+	position: relative;
+	width: 250px;
+	height: 150px;
+	&__link{
+		color: #626262;
+		font-family: 'Roboto', sans-serif;
+		font-weight: 300;
+		position: absolute;
+		&_1{
+			font-size: 21px;
+			top: 10px;
+			left: 20px;
+		}
+		&_2{
+			font-size: 13px;
+			top: 20px;
+			left: 80px;
+		}
+		&_3{
+			font-size: 17px;
+			top: 12px;
+			left: 160px;
+		}
+		&_4{
+			font-size: 13px;
+			top: 45px;
+			left: 10px;
+		}
+		&_5{
+			font-size: 12px;
+			top: 35px;
+			left: 180px;
+		}
+		&_6{
+			font-size: 32px;
+			top: 45px;
+			left: 100px;
+		}
+		&_7{
+			font-size: 11px;
+			top: 65px;
+			left: 175px;
+		}
+		&_8{
+			font-size: 18px;
+			top: 85px;
+			left: 0px;
+		}
+		&_9{
+			font-size: 16px;
+			top: 90px;
+			right: -6px;
+		}
+		&_10{
+			font-size: 11px;
+			top: 115px;
+			left: 40px;
+		}
+	}
 }
-div.jqcloud span#demo_word_1,
-div.jqcloud span#demo1_word_1,
-div.jqcloud span#demo2_word_1{
-	font-size: 13px !important;
-}
-div.jqcloud span#demo_word_2,
-div.jqcloud span#demo1_word_2,
-div.jqcloud span#demo2_word_2{
-	font-size: 39px !important;
-}
-div.jqcloud span#demo_word_3,
-div.jqcloud span#demo1_word_3,
-div.jqcloud span#demo2_word_3{
-	font-size: 13px !important;
-}
-div.jqcloud span#demo_word_4,
-div.jqcloud span#demo1_word_4,
-div.jqcloud span#demo2_word_4{
-	font-size: 16px !important;
-}
-div.jqcloud span#demo_word_5,
-div.jqcloud span#demo1_word_5,
-div.jqcloud span#demo2_word_5{
-	font-size: 20px !important;
-}
-div.jqcloud span#demo_word_6,
-div.jqcloud span#demo1_word_6,
-div.jqcloud span#demo2_word_6{
-	font-size: 12px !important;
-}
-div.jqcloud span#demo_word_7,
-div.jqcloud span#demo1_word_7,
-div.jqcloud span#demo2_word_7{
-	font-size: 13px !important;
-}
-div.jqcloud span#demo_word_8,
-div.jqcloud span#demo1_word_8,
-div.jqcloud span#demo2_word_8{
-	font-size: 20px !important;
-}
-div.jqcloud span#demo_word_9,
-div.jqcloud span#demo1_word_9,
-div.jqcloud span#demo2_word_9{
-	font-size: 17px !important;
-}
-div.jqcloud span#demo_word_10,
-div.jqcloud span#demo1_word_10,
-div.jqcloud span#demo2_word_10{
-	font-size: 11px !important;
-}
-div.jqcloud span#demo_word_11,
-div.jqcloud span#demo1_word_11,
-div.jqcloud span#demo2_word_11{
-	font-size: 8px !important;
-}
-div.jqcloud span#demo_word_12,
-div.jqcloud span#demo1_word_12,
-div.jqcloud span#demo2_word_12{
-	font-size: 16px !important;
-}
-div.jqcloud span#demo_word_13,
-div.jqcloud span#demo1_word_13,
-div.jqcloud span#demo2_word_13{
-	font-size: 17px !important;
-}
-div.jqcloud span#demo_word_14,
-div.jqcloud span#demo1_word_14,
-div.jqcloud span#demo2_word_14{
-	font-size: 13px !important;
+.demo3{
+	position: relative;
+	width: 250px;
+	height: 150px;
+	&__link{
+		color: #626262;
+		font-family: 'Roboto', sans-serif;
+		font-weight: 300;
+		position: absolute;
+		&_1{
+			font-size: 17px;
+			top: 15px;
+			left: 25px;
+		}
+		&_2{
+			font-size: 11px;
+			top: 15px;
+			left: 90px;
+		}
+		&_3{
+			font-size: 31px;
+			top: 10px;
+			left: 190px;
+		}
+		&_4{
+			font-size: 12px;
+			top: 35px;
+			left: 105px;
+		}
+		&_5{
+			font-size: 13px;
+			top: 45px;
+			left: 10px;
+		}
+		&_6{
+			font-size: 13px;
+			top: 45px;
+			left: 210px;
+		}
+		&_7{
+			font-size: 18px;
+			top: 60px;
+			left: 105px;
+		}
+		&_8{
+			font-size: 32px;
+			top: 70px;
+			left: 35px;
+		}
+		&_9{
+			font-size: 11px;
+			top: 95px;
+			left: 120px;
+		}
+		&_10{
+			font-size: 16px;
+			top: 115px;
+			left: 65px;
+		}
+	}
 }
 /*Information end*/
 /*Kinds*/
@@ -2241,6 +2406,7 @@ div.jqcloud span#demo2_word_14{
 		margin-bottom: 18px;
 		display: flex;
 		justify-content: flex-start;
+		align-items: flex-start;
 		p{
 			color: #192028;
 			font-family: 'Roboto', sans-serif;
@@ -2256,6 +2422,7 @@ div.jqcloud span#demo2_word_14{
 			font-weight: 400;
 			display: flex;
     		align-items: center;
+    		padding-top: 2px;
 		}
 	}
 	/*Perinfo account__oo page end*/
@@ -2282,6 +2449,9 @@ div.jqcloud span#demo2_word_14{
 		height: 41px;
 		border-radius: 5px;
 		margin-bottom: 10px;
+		&_ml{
+			margin-left: 5px;
+		}
 		input{
 			-webkit-appearance: radio;	
 		}
@@ -2432,8 +2602,6 @@ div.jqcloud span#demo2_word_14{
 	}
 }
 /*Cart page end*/
-
-/*Cart_goods page*/
 .rating{
 	display: flex;
 	justify-content: flex-start;
@@ -2442,7 +2610,62 @@ div.jqcloud span#demo2_word_14{
 	span{
 		font-size: 20px;
 	}
+	&__starcont{
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		i{
+			color: #a91c5f;
+			margin-left: 1px;
+			font-size: 21px;
+		}
+	}
 }
+.coutdown{
+	padding: 12px;
+	&__p{
+		line-height: normal;
+		color: #bd3c7a;
+		font-family: 'Roboto', sans-serif;
+		font-size: 16px;
+		font-weight: 500;
+		text-transform: uppercase;
+		text-align: center;
+		margin-bottom: 5px;
+	}
+}
+#clock{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	div{
+		width: 32px;
+		height: 33px;
+		background: url(../img/timer.png) center center no-repeat;
+		color: #bd3c7a;
+		font-family: 'Roboto', sans-serif;
+		font-size: 16px;
+		font-weight: 500;
+		text-align: center;
+		margin: 0 1px;
+		align-items: center;
+    	justify-content: center;
+    	display: flex;
+    	flex-direction: column;
+		span{
+			font-size: 8px;
+			display: inline-block;
+			margin-top: -2px;
+		}
+	}
+}
+/*Cart_goods page*/
+
+/*Gallery*/
+.sp-zoom{
+	display: none !important;
+}
+/*Gallery end*/
 .description{
 	width: 810px;
 	border: 1px solid #cfcfcf;
@@ -2588,12 +2811,39 @@ div.jqcloud span#demo2_word_14{
 		display: flex;
 		justify-content: flex-start;
 		align-items: center;
+		cursor: pointer;
 		&_r{
+			border: 1px solid #d01a2d;
+			border-width: 0;
+			border-radius: 15px;
+		}
+		&_blu{
+			border: 1px solid #1321ae;
+			border-width: 0;
+			border-radius: 15px;
+		}
+		&_black{
+			border: 1px solid #363637;
+			border-width: 0;
+			border-radius: 15px;
+		}
+		span{
+			display: none;
+		}
+		i{
+			display: none;
+		}
+		&_active{
+			border-width: 1px;
 			padding: 3px;
 			padding-right: 7px;
-			border: 1px solid #d01a2d;
-			border-radius: 15px;
 			margin-right: 5px;
+			span{
+				display: block;
+			}
+			i{
+				display: inline-block;
+			}
 		}
 	}
 	&__color{
@@ -2655,12 +2905,21 @@ div.jqcloud span#demo2_word_14{
 	}
 	&__rating{
 		margin-bottom: 10px;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
 		span{
 			color: #515151;
 			font-family: 'Roboto', sans-serif;
 			font-size: 14px;
 			font-weight: 400;
+			margin-right: 8px;
 		}
+	}
+	&__stars{
+		font-size: 20px;
+		color: #a2a5a6;
+		display: flex;
 	}
 	&__textarea{
 		margin-bottom: 18px;
@@ -2744,6 +3003,43 @@ div.jqcloud span#demo2_word_14{
 		margin-top: 15px;
 	}
 }
+.ratingg {
+    unicode-bidi: bidi-override;
+    direction: rtl;
+    width: 112px;
+}
+
+.ratingg input {
+    position: absolute;
+    left: -999999px;
+}
+
+.ratingg label {
+    display: inline-block;
+    font-size: 0;
+}
+
+.ratingg > label:before {
+    position: relative;
+    font: 24px/1 FontAwesome;
+    display: block;
+    content: "\f006";
+    color: #ccc;
+    background: #a2a5a6;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.ratingg > label:hover:before,
+.ratingg > label:hover ~ label:before,
+.ratingg > label.selected:before,
+.ratingg > label.selected ~ label:before {
+    content: "\f005";
+    color: #f0ad4e;
+    background: #a91c5f;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 .viewed,.interesting{
 	border: 1px solid #cfcfcf;
     border-radius: 8px;
@@ -2826,6 +3122,9 @@ div.jqcloud span#demo2_word_14{
 		overflow: hidden;
 		margin-bottom: 7px;
 		box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.17);
+		&:hover{
+			box-shadow: 0px 4px 15px 2px rgba(0, 0, 0, 0.17);
+		}
 	}
 }
 .filterbar{
@@ -3084,6 +3383,9 @@ div.jqcloud span#demo2_word_14{
 			img{
 				filter: brightness(2);
 			}
+			&:hover{
+				background: #553082;
+			}
 		}
 	}
 	.slick-slider{
@@ -3337,16 +3639,14 @@ div.jqcloud span#demo2_word_14{
     	flex-wrap: wrap;
 	}
 	&__remove{
-		background: #3b205c;
-		border-color: #3b205c;
 		position: absolute;
 		right: -10px;
 		top: -10px;
-		img{
-			filter: brightness(2);
-		}
+		background: #fff;
 		&:hover{
 			background: #3b205c;
+			background: #3b205c;
+			border-color: #3b205c;
 		}
 	}
 }
