--- a/smoky/scss/layout/_header.scss
+++ b/smoky/scss/layout/_header.scss
@@ -32,25 +32,28 @@ header{
     	text-align: center;
 	}
 	&__cont{
-		margin-right: 15px;
+		margin-right: 37px;
+		padding-left: 3px;
+		padding-bottom: 3px;
 	}
 	&__phone{
 		display: flex;
 		justify-content: flex-start;
 		align-items: center;
+		margin-bottom: 3px;
 		a{
 			color: #3a424b;
 			font-family: 'Roboto', sans-serif;
-			font-size: 20px;
+			font-size: 22px;
 			font-weight: 700;
 		}
 	}
 	&__time{
-		margin-bottom: 10px;
+		margin-bottom: 9px;
 		p{
 			color: #3a424b;
 			font-family: 'Roboto', sans-serif;
-			font-size: 10px;
+			font-size: 11px;
 			font-weight: 700;
 			text-transform: uppercase;
     		line-height: 12px;
@@ -59,12 +62,11 @@ header{
 	&__call{
 		color: #3a424b;
 		font-family: 'Roboto', sans-serif;
-		font-size: 12px;
+		font-size: 11px;
 		font-weight: 700;
 		text-transform: uppercase;
 		padding-bottom: 3px;
 		border-bottom: 1px dashed #192028;
-		letter-spacing: 1px;
 	}
 	&__info{
 		margin-right: 15px;
@@ -83,7 +85,7 @@ header{
 		display: flex;
 		justify-content: flex-start;
 		align-items: center;
-		margin-bottom: 3px;
+		margin-bottom: 0px;
 		i{
 			margin-left: 5px;
 			width: 17px;
@@ -133,12 +135,12 @@ header{
 		position: relative;
 		input{
 			height: 33px;
-			width: 238px;
+			width: 240px;
 			border: 1px solid rgba(174,174,174,1);
 			border-radius: 3px;
 			box-shadow: 0px 0px 0px 1px rgba(236,236,236,1) inset;
 			padding-left: 10px;
-			color: #c3c3c3;
+			color: #000;
 			font-family: 'Roboto', sans-serif;
 			font-size: 14px;
 			font-weight: 400;
