--- a/smoky/scss/layout/_content.scss
+++ b/smoky/scss/layout/_content.scss
@@ -920,7 +920,6 @@ h3{
 	}
 	li{
 		display: block;
-		padding: 8px 15px;
 		border-radius: 30px;
 		&:hover{
 			background: #a91c5f;
@@ -2353,7 +2352,7 @@ h3{
 			z-index: 100;
 			cursor: text;
 			position: absolute;
-			top: 9px;
+			top: 8px;
 			left: 15px;
 			color: #aeaeae;
 		    font-family: 'Roboto', sans-serif;
@@ -2481,7 +2480,7 @@ h3{
 		    content: '';
 		    position: absolute;
 		    left: -80px;
-		    top: -1px;
+		    top: 1px;
 		    width: 16px;
 		    height: 16px;
 		    border: 1px solid #aeaeae;
@@ -2499,7 +2498,7 @@ h3{
 		    height: 8px;
 		    background: #000;
 		    position: absolute;
-		    top: 3px;
+		    top: 5px;
 		    left: -76px;
 		    border-radius: 100%;
 		    -webkit-transition: all 0.2s ease;
@@ -2521,11 +2520,11 @@ h3{
 		&_2,&_3,&_4{
 			[type="radio"]:checked + label:before,
 			[type="radio"]:not(:checked) + label:before {
-			    top: 6px;
+			    top: 9px;
 			}
 			[type="radio"]:checked + label:after,
 			[type="radio"]:not(:checked) + label:after {
-			    top: 10px;
+			    top: 13px;
 			}
 		}
 	}
@@ -2652,10 +2651,12 @@ h3{
     	justify-content: center;
     	display: flex;
     	flex-direction: column;
+    	-webkit-text-size-adjust: 100%;
 		span{
 			font-size: 8px;
 			display: inline-block;
 			margin-top: -2px;
+			-webkit-text-size-adjust: 100%;
 		}
 	}
 }
@@ -2990,11 +2991,15 @@ h3{
 			width: 181px;
 		}
 	}
+	&__kapchacont{
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+	}
 	&__kapcha{
 		height: 31px;
 		width: 88px;
 		margin-right: 4px;
-		float: left;
 		img{
 			width: 100%;
 		}
@@ -4200,12 +4205,9 @@ h3{
 	.mainnav{
     	ul{
     		display: flex;
-    		justify-content: space-between;
+    		justify-content: space-around;
     	}
-    	li{
-    		padding: 8px 10px;
-    	}
-	}
+   	}
 	.information{
 		&__sizetext{
 			padding-right: 65px;
