--- a/smoky/scss/layout/_content.scss
+++ b/smoky/scss/layout/_content.scss
@@ -760,25 +760,20 @@ h3{
 	}
 	&__cont{
 		position: relative;
+		display: flex;
 	}
 	&__tabs{
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-start;
 		background: #dddddd;
-		float: left;
-		min-height: 235px;
-		position: absolute;
-		left: 0;
-		top: 0;
-		right: 0;
-		bottom: 0;
+		min-height: 170px;
 		width: 31px;
 	}
 	&__tab{
 		color: #595959;
 		width: 30px;
-		height: 47px;
+		height: 34px;
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -798,7 +793,6 @@ h3{
 	&__block{
 		background: #fff;
 		padding: 15px 20px;
-		float: right;
 		width: calc(100% - 30px);
 		&_1{
 			border-bottom: 1px solid #c3c3c3;
@@ -2369,7 +2363,7 @@ h3{
 			width: 100%;
 		}
 		label.perinfo_label2{
-			z-index: 100;
+			z-index: 3;
 			cursor: text;
 			position: absolute;
 			top: 8px;
@@ -4011,6 +4005,25 @@ h3{
 	}
 }
 /*Account oo page end*/
+/*Feedback page*/
+.feedback{
+	width: 100%;
+	float: none;
+	&__box{
+		&_grey{
+			background: #f4f4f4;
+		}
+	}
+	&__pager{
+		margin-top: 40px;
+	}
+	&__textarea{
+		textarea{
+			height: 250px;
+		}
+	}
+}
+/*Feedback oo page end*/
 
 /*Modal*/
 .modalform{
@@ -4097,6 +4110,86 @@ h3{
 	}
 	&__p{
 		text-align: left;
+	}
+}
+.modallog,.modalreg{
+	width: 430px;
+	height: 490px;
+	.loginpop, .registerpop{
+		&__box{
+			padding-bottom: 20px;
+			padding-top: 20px;
+			&_1{
+				padding: 0;
+				padding-bottom: 20px;
+			}
+			&:last-child{
+				border-bottom: 0px;
+			}
+		}
+		&__input{
+			margin-bottom: 10px;
+			p{
+				font-size: 12px;
+				font-weight: 300;
+				color: #333333;
+				margin-bottom: 7px;
+			}
+			input{
+				height: 40px;
+				border: 1px solid #aeaeae;
+				padding: 0 10px;
+				font-size: 14px;
+				font-weight: 300;
+				width: 100%;
+				color: #000;
+				&:placeholder{
+					color: #626262;
+				}
+			}
+		}
+		&__pass{
+			font-size: 12px;
+			font-weight: 300;
+			color: #333333;
+		}
+		&__soccont{
+			p{
+				font-size: 12px;
+				font-weight: 300;
+				color: #333333;
+			}
+		}
+		&__reg{
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			p{
+				font-size: 14px;
+				font-weight: 300;
+			}
+			a{
+				font-size: 14px;
+				font-weight: 500;
+				text-transform: uppercase;
+			}
+		}
+	}
+	.showmore{
+		margin-top: 10px;
+	}
+	.socials{
+		justify-content: center;
+		a{
+			border-radius: 100%;
+		    display: inline-block;
+		    height: 38px;
+		    width: 38px;
+		    margin: 0 5px;
+		    &:hover{
+		    	box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.35);
+		    }
+		}
 	}
 }
 .modalcall{
