--- a/smoky/scss/layout/_content.scss
+++ b/smoky/scss/layout/_content.scss
@@ -2273,6 +2273,7 @@ h3{
 			font-size: 14px;
 			font-weight: 300;
 			margin-right: 3px;
+			padding-bottom: 2px;
 		}
 	}
 	.colorbox__item{
@@ -4009,6 +4010,7 @@ h3{
 .feedback{
 	width: 100%;
 	float: none;
+	margin-bottom: 15px;
 	&__box{
 		&_grey{
 			background: #f4f4f4;
