--- a/smoky/css/style.css
+++ b/smoky/css/style.css
@@ -3313,6 +3313,7 @@ h3 {
   font-size: 14px;
   font-weight: 300;
   margin-right: 3px;
+  padding-bottom: 2px;
 }
 .carttable .colorbox__item {
   width: 11px;
@@ -3844,7 +3845,7 @@ h3 {
   border: 1px solid #cfcfcf;
   border-radius: 8px;
   padding: 15px;
-  padding-top: 20px;
+  padding-top: 14.5px;
   position: relative;
 }
 .product__item_top {
@@ -5054,6 +5055,7 @@ h3 {
 .feedback {
   width: 100%;
   float: none;
+  margin-bottom: 15px;
 }
 .feedback__box_grey {
   background: #f4f4f4;
